<resources>
    <string name="app_name">PersonalTasks</string>
    <string name="titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="data_limite">Data limite</string>
    <string name="remover_task">Remover task</string>
    <string name="editar_task">Editar task</string>
    <string name="nova_task">Nova task</string>
    <string name="detalhes">Detalhes</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="resetar_senha">Resetar senha</string>
    <string name="sair">Sair</string>
    <string name="restaurar">Restaurar</string>
    <string name="tasks_ativas">Tasks ativas</string>
    <string name="deletar">Deletar</string>
</resources>