<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titulo_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/descricao_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricao" />

    <TextView
        android:id="@+id/data_limite_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_limite" />

    <TextView
        android:id="@+id/concluida_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Concluída: " />

    <TextView
        android:id="@+id/prioridade_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Prioridade: "
        />
</LinearLayout>